Updated br to be displayed none to avoid extra spacing

--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -208,6 +208,10 @@ div.category_items.gallery {
 	padding: 0em 0.5em;
 }
 
+div.category_items br {
+	display: none;
+}
+
 div.item {
 	display: inline-block;
 	vertical-align: top;
